--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 #----------Instillinger: Boks på toppen av side----------------------------------------------------------------------
-name: Sok-xxxx Emnetittel #Emnetittel
-semester: Høst/Vår 20xx 
+name: Sok-2008 Nordiske modellen #Emnetittel
+semester: Høst 2023
 image: tema.jpg
 
 
