--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #----------Instillinger: Boks på toppen av side----------------------------------------------------------------------
 name: Sok-2008 Nordiske modellen #Emnetittel
 semester: Høst 2023
-image: NordiskeModellen.png
+image: tema.jpg
 
 
 
